@@ -197,6 +197,7 @@ pumping_recipe=(Pumping)
 planting_recipe=(Planting)
 agriculture_square=Agriculture Tower Square
 agriculture_unit=squares
+catalyst=Catalyst
 recipe_crafting_time=\n  Crafting Time: __1__
 recipe_header=\n  __1__:
 recipe_none=\n    None
